--- a/app/src/main/res/layout/fragment_driver_insurance.xml
+++ b/app/src/main/res/layout/fragment_driver_insurance.xml
@@ -7,16 +7,16 @@
     android:orientation="vertical"
     tools:context=".fragment.DriverInsuranceFragment">
 
-   <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
 
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="match_parent"
+           android:layout_height="wrap_content"
            android:padding="5dp"
-           android:background="@drawable/bg_patterns2x"
+           android:background="@drawable/bg_patterns"
            android:orientation="vertical">
 
 
@@ -29,9 +29,9 @@
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
-                   android:id="@+id/img_back"
+                   android:id="@+id/img_back_insurence"
                    android:layout_width="35dp"
-                   android:layout_height="35dp"
+                   android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/back_all"/>
                <TextView
@@ -167,6 +167,7 @@
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
+                   android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border_right"
                    android:orientation="horizontal">
@@ -180,8 +181,8 @@
                    </androidx.recyclerview.widget.RecyclerView>
                    <ImageView
                        android:id="@+id/dummy_img_pass"
-                       android:layout_width="80dp"
-                       android:layout_height="80dp"
+                       android:layout_width="70dp"
+                       android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/upload_images3x"
                        android:visibility="visible"
@@ -191,8 +192,8 @@
                </RelativeLayout>
                <ImageView
                    android:id="@+id/img_upload_passport"
-                   android:layout_width="25dp"
-                   android:layout_height="25dp"
+                   android:layout_width="20dp"
+                   android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/upload_all"/>
            </LinearLayout>
@@ -274,7 +275,7 @@
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
-                       android:text="Health insurance company/optional social /n security number"
+                       android:text="Slect Insurance Company"
                        android:fontFamily="@font/avenir_black"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
@@ -297,6 +298,7 @@
 
 
            </LinearLayout>
+
            <Button
                android:id="@+id/btn_save_insur"
                android:layout_width="match_parent"
@@ -304,8 +306,8 @@
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:layout_marginTop="50dp"
-               android:layout_marginBottom="30dp"
                android:text="Save Profile"
+               android:layout_gravity="end"
                android:fontFamily="@font/avenir_black"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
@@ -314,6 +316,6 @@
 
        </LinearLayout>
 
-   </ScrollView>
+</ScrollView>
 
 </LinearLayout>
