--- a/app/src/main/res/layout/activity_profile_creation_passenger.xml
+++ b/app/src/main/res/layout/activity_profile_creation_passenger.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@android:color/white"
-    tools:context=".fragment.ProfileCreationPassengerFragment">
+    >
 
     <LinearLayout
     android:layout_width="match_parent"
@@ -14,9 +14,6 @@
     android:background="@drawable/bg_patterns2x"
     android:padding="10dp"
     android:orientation="vertical">
-
-
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -317,12 +314,13 @@
             </RadioGroup>
 
         </LinearLayout>
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/tv_business"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Business Details"
@@ -336,10 +334,29 @@
                     android:layout_height="wrap_content"
                     android:text="(if you want make business)"
                     android:fontFamily="@font/avenir_black"
+                    android:layout_toRightOf="@+id/tv_business"
                     android:textSize="10sp"
+                    android:gravity="center"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginTop="3dp"
                     android:textColor="@color/grey"/>
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/iv_business_dropdown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="12dp"
+                    android:gravity="center"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/drop_down"/>
+
+            </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/ll_business"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -370,7 +387,7 @@
                         android:layout_height="wrap_content"
                         app:hintTextAppearance="@style/TextInputLayoutHintText"
                         android:textColorHint="@color/grey"
-                        android:hint="Business or Company Name (Optional)"
+                        android:hint="Business or Company Name"
                         app:hintTextColor="@android:color/darker_gray"
                         android:layout_marginLeft="5dp"
                         >
@@ -421,7 +438,7 @@
                         android:layout_height="wrap_content"
                         app:hintTextAppearance="@style/TextInputLayoutHintText"
                         android:textColorHint="@color/grey"
-                        android:hint="Business Street Address 1(Optional)"
+                        android:hint="Business Street Address 1"
                         app:hintTextColor="@android:color/darker_gray"
                         android:layout_marginLeft="5dp"
                         >
@@ -473,7 +490,7 @@
                         android:layout_height="wrap_content"
                         app:hintTextAppearance="@style/TextInputLayoutHintText"
                         android:textColorHint="@color/grey"
-                        android:hint="Business Street Address 2(Optional)"
+                        android:hint="Business Street Address 2"
                         app:hintTextColor="@android:color/darker_gray"
                         android:layout_marginLeft="5dp"
                         >
@@ -526,7 +543,7 @@
                         android:layout_height="wrap_content"
                         app:hintTextAppearance="@style/TextInputLayoutHintText"
                         android:textColorHint="@color/grey"
-                        android:hint="Business City (Optional)"
+                        android:hint="Business City"
                         app:hintTextColor="@android:color/darker_gray"
                         android:layout_marginLeft="5dp"
                         >
@@ -579,7 +596,7 @@
                         android:layout_height="wrap_content"
                         app:hintTextAppearance="@style/TextInputLayoutHintText"
                         android:textColorHint="@color/grey"
-                        android:hint="Business Country (Optional)"
+                        android:hint="Business Country"
                         app:hintTextColor="@android:color/darker_gray"
                         android:layout_marginLeft="5dp"
                         >
@@ -630,7 +647,7 @@
                         android:layout_height="wrap_content"
                         app:hintTextAppearance="@style/TextInputLayoutHintText"
                         android:textColorHint="@color/grey"
-                        android:hint="VAT Number (Optional)"
+                        android:hint="VAT Number"
                         app:hintTextColor="@android:color/darker_gray"
                         android:layout_marginLeft="5dp"
                         >
@@ -652,6 +669,7 @@
 
                 </LinearLayout>
 
+            </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -712,6 +730,7 @@
                         >
 
                         <EditText
+                            android:id="@+id/edt_cardno"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenir_black"
