--- a/app/src/main/res/layout/activity_new_driver_nav.xml
+++ b/app/src/main/res/layout/activity_new_driver_nav.xml
@@ -5,7 +5,7 @@
     android:id="@+id/nav_dra"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".panels.driver.DriverMainActivity">
+    tools:context=".panels.driver.dashboard.DriverMainActivity">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
