--- a/app/src/main/res/layout/activity_patterns_lock.xml
+++ b/app/src/main/res/layout/activity_patterns_lock.xml
@@ -2,32 +2,51 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="@dimen/_24sdp"
+    android:background="@drawable/bg_patterns2x"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
+        android:id="@+id/linear_header"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:layout_gravity="center"
+        android:gravity="start"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/img_back_addv"
+            android:layout_width="35dp"
+            android:layout_height="match_parent"
+            android:padding="5dp"
+            android:src="@drawable/back_all" />
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/bg_patterns2x"
         android:fillViewport="true"
         android:orientation="vertical"
         android:scrollbarSize="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linear_header">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_24sdp"
             android:layout_marginEnd="@dimen/_20sdp"
             android:orientation="vertical">
+
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_42sdp"
                 android:src="@drawable/logo_splash" />
 
             <TextView
@@ -36,6 +55,7 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/avenir_black"
                 android:text="Verification Code"
+                android:visibility="gone"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -43,11 +63,22 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_35sdp"
+                android:fontFamily="@font/avenir_light"
+                android:text="Remember this PIN. If you forget it, you'll need to forgot password."
+                android:gravity="center"
+                android:textColor="#FF3D3D"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:fontFamily="@font/avenir_black"
-                android:text="@string/verification_txt"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="16sp"
+                android:text="Pin must contain at least 4 digits."
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <RelativeLayout
@@ -77,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
 
@@ -109,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/bottom_linear"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_50sdp"
                 android:background="@drawable/button_background_next"
                 android:fontFamily="@font/avenir_black"
                 android:text="Submit"
@@ -124,7 +156,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/_30sdp"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
 
                 <TextView
@@ -147,6 +180,8 @@
                     android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
