--- a/app/src/main/res/layout/fragment_chosse_security.xml
+++ b/app/src/main/res/layout/fragment_chosse_security.xml
@@ -51,29 +51,36 @@
                 android:layout_marginTop="@dimen/_35sdp"/>
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/center_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/_50sdp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_weight="1"
-                android:src="@drawable/face_id2x"/>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_weight="1"
-                android:src="@drawable/touch_id"/>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_weight="1"
-                android:src="@drawable/pin_lock2x"/>
-        </LinearLayout>
+            android:layout_marginTop="@dimen/_50sdp"
+            android:layout_marginBottom="@dimen/_40sdp"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/btnFace"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:src="@drawable/face_id2x" />
+
+            <ImageView
+                android:id="@+id/btnFingerPrint"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:src="@drawable/touch_id" />
+
+            <ImageView
+                android:id="@+id/btnPin"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:src="@drawable/pin_lock2x" />
+        </LinearLayout>
         <Button
             android:id="@+id/btn_proceed"
             android:layout_width="match_parent"
