--- a/app/src/main/res/layout/image_upload.xml
+++ b/app/src/main/res/layout/image_upload.xml
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/realative_img"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:orientation="horizontal">
+    android:background="@color/transparent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/realative_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:layout_marginTop="-5dp">
-        <ImageView
-            android:id="@+id/img_upload"
-            android:layout_width="150dp"
-            android:layout_height="120dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            />
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/img_upload"
+        android:layout_width="@dimen/_75sdp"
+        android:layout_height="@dimen/_75sdp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/upload_images3x"
+        app:riv_corner_radius="@dimen/_5sdp"
+        app:riv_oval="false"
+        app:riv_border_width="@dimen/_1sdp"
+        app:riv_border_color="@color/grey"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <ImageView
-            android:id="@+id/img_cross"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/close3x"
-            app:layout_constraintBottom_toBottomOf="@+id/img_upload"
-            app:layout_constraintEnd_toEndOf="@+id/img_upload"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/img_upload"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.050000012" />
+    <ImageView
+        android:id="@+id/img_cross"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/close3x"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintTop_toBottomOf="@id/img_upload"
+        app:layout_constraintBottom_toTopOf="@id/img_upload"
+        app:layout_constraintStart_toEndOf="@id/img_upload"
+        app:layout_constraintEnd_toStartOf="@id/img_upload"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
