--- a/app/src/main/res/layout/vehicle_info_item.xml
+++ b/app/src/main/res/layout/vehicle_info_item.xml
@@ -32,7 +32,6 @@
                 android:id="@+id/txt_name_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hyundai Verna"
                 android:layout_weight="1"
                 android:fontFamily="@font/avenir_black"
                 android:textStyle="bold"
@@ -72,11 +71,22 @@
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:gravity="end"
-                android:padding="5dp"
-                />
+                android:padding="5dp" />
 
         </LinearLayout>
-
+        <TextView
+            android:id="@+id/tvRemoveVehicle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="Remove Vehicle"
+            android:layout_weight="1"
+            android:layout_gravity="end"
+            android:fontFamily="@font/avenir_light"
+            android:textStyle="bold"
+            android:textColor="@color/red"
+            android:layout_marginTop="@dimen/_1sdp"
+            android:textSize="@dimen/_10ssp"
+            android:gravity="end"
+            android:padding="@dimen/_5sdp" />
     </LinearLayout>
-
 </LinearLayout>
