--- a/app/src/main/res/layout/activity_profile_creation_driver.xml
+++ b/app/src/main/res/layout/activity_profile_creation_driver.xml
@@ -437,9 +437,9 @@
 
 
                         <Spinner
+                            android:id="@+id/spVehicleTypes"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:entries="@array/vechiel_type"
                             android:fontFamily="@font/avenir_black"
                             android:textColor="@android:color/black"
                             android:textSize="12sp"
@@ -513,20 +513,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/vehicle_info_rec"
                         android:orientation="vertical"
+                        android:nestedScrollingEnabled="false"
                         tools:listitem="@layout/vehicle_info_item"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     </androidx.recyclerview.widget.RecyclerView>
 
-                </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/ll_add_vechicle"
