--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -18,8 +18,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="0dp"
             android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="@dimen/_20sdp"
             android:orientation="vertical">
 
@@ -27,9 +27,9 @@
                 android:id="@+id/img_back"
                 android:layout_width="wrap_content"
                 android:layout_height="?actionBarSize"
+                android:layout_marginTop="@dimen/_24sdp"
                 android:fontFamily="@font/avenir_black"
                 android:padding="5dp"
-                android:layout_marginTop="@dimen/_24sdp"
                 android:src="@drawable/back" />
 
 
@@ -57,39 +57,59 @@
                 android:textColor="@android:color/darker_gray"
                 android:textSize="15sp" />
 
-            <com.google.android.material.textfield.TextInputLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="@dimen/_50sdp"
-                android:background="@drawable/edit_text_border_right"
-                android:hint="Enter your E-mail/Mobile Number"
-                android:padding="10dp"
-                android:textColorHint="@color/grey"
-                app:hintTextAppearance="@style/TextInputLayoutHintText"
-                app:hintTextColor="@android:color/darker_gray">
+                android:layout_marginTop="@dimen/_20sdp"
+                android:background="@drawable/edit_text_border_left"
+                android:orientation="horizontal">
 
-                <EditText
+                <com.rilixtech.CountryCodePicker
+                    android:id="@+id/ccp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    app:ccp_hideNameCode="true"
+                    android:visibility="gone"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    app:ccp_showFlag="false"
+                    app:ccp_textFont="avenir_black.ttf"
+                    app:ccp_textSize="12sp" />
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@null"
-                    android:fontFamily="@font/avenir_black"
-                    android:inputType="text|textNoSuggestions"
-                    android:paddingBottom="5dp"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="12sp"
-                    android:translationY="5dp" />
+                    android:layout_height="wrap_content"
+                    android:hint="Enter E-mail/ Mobile Number"
+                    android:textColorHint="@color/grey"
+                    app:hintTextAppearance="@style/TextInputLayoutHintText"
+                    app:hintTextColor="@android:color/darker_gray">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <EditText
+                        android:id="@+id/edtEmailPhone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:fontFamily="@font/avenir_black"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:imeOptions="actionDone"
+                        android:paddingBottom="5dp"
+                        android:singleLine="true"
+                        android:textColor="@android:color/black"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btn_continue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_80sdp"
                 android:background="@drawable/button_background_next"
                 android:fontFamily="@font/avenir_black"
                 android:text="Submit"
