--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -19,7 +19,7 @@
         android:paddingStart="0dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_icon_home"
+            android:id="@+id/ivUserImage"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:src="@drawable/profile_placeholder2x" />
@@ -33,7 +33,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_title"
+                android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/avenir_black"
