--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -68,8 +68,8 @@
                 <com.rilixtech.CountryCodePicker
                     android:id="@+id/ccp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
                     app:ccp_hideNameCode="true"
                     android:visibility="gone"
                     android:layout_marginStart="@dimen/_5sdp"
@@ -98,7 +98,8 @@
                         android:singleLine="true"
                         android:textColor="@android:color/black"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:translationY="5dp"/>
 
 
                 </com.google.android.material.textfield.TextInputLayout>
